mysql install，jdk17，maven cert